--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
