--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "start": "npm run dev"
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=development node webpack/dev"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
@@ -20,6 +20,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
@@ -29,11 +30,10 @@
     "react-dom": "^17.0.1",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-middleware": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
