--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "cross-env NODE_ENV=development node webpack/dev"
+    "start": "cross-env NODE_ENV=development node webpack/dev",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
