--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development node webpack/dev",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "postcss": "postcss src/tailwind.css --output src/style.css"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
@@ -27,6 +28,9 @@
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.2",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass-loader": "^10.0.5",
@@ -36,5 +40,10 @@
     "webpack-cli": "^4.1.0",
     "webpack-dev-middleware": "^4.0.0",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "dependencies": {
+    "astroturf": "^0.10.5",
+    "autoprefixer": "^10.1.0",
+    "tailwindcss": "^2.0.2"
   }
 }
