--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "astroturf": "^0.10.5",
     "autoprefixer": "^10.1.0",
+    "axios": "^0.21.1",
     "tailwindcss": "^2.0.2"
   }
 }
