--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
+    "html-webpack-haml-plugin": "^0.3.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^5.0.0",
