--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^5.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "haml-loader": "^0.1.0",
     "html-loader": "^1.3.2",
     "html-webpack-haml-plugin": "^0.3.0",
     "html-webpack-plugin": "^4.5.0",
