--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development node webpack/dev",
-    "build": "cross-env NODE_ENV=production webpack",
-    "postcss": "postcss tailwind.css --output src/tailwind.css"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
@@ -25,7 +24,6 @@
     "file-loader": "^6.2.0",
     "haml-loader": "^0.1.0",
     "html-loader": "^1.3.2",
-    "html-webpack-haml-plugin": "^0.3.0",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
@@ -33,10 +31,12 @@
     "postcss": "^8.2.2",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^4.1.0",
+    "purgecss-webpack-plugin": "^3.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
@@ -47,6 +47,6 @@
     "astroturf": "^0.10.5",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.1",
-    "tailwindcss": "^2.0.2"
+    "styled-components": "^5.2.1"
   }
 }
