--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development node webpack/dev",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "prod": "webpack --config webpack/webpack.prod.config.js"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
