--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development node webpack/dev",
-    "build": "cross-env NODE_ENV=production webpack",
-    "prod": "webpack --config webpack/webpack.prod.config.js"
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
