--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development node webpack/dev",
-    "build": "cross-env NODE_ENV=production webpack"
+    "start": "cross-env NODE_ENV=development node webpack/dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.config.js"
   },
   "keywords": [],
   "author": "jihye <qkrwlgp76@gmail.com>",
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
